Closed Bug 926619 Opened 11 years ago Closed 11 years ago

WebAudio: "Assertion failure: iter->AsAudioNodeStream()"

Categories

(Core :: Web Audio, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: jruderman, Assigned: karlt)

References

Details

(Keywords: regression)

Attachments

(2 files)

Assertion failure: iter->AsAudioNodeStream(), at content/media/MediaStreamGraph.cpp:510
Attached file testcase
Karl, can you look at this?
Assignee: nobody → karlt
Clearly our assumption that the streams in MediaStreamAudio{Source,Destination}Node cannot end up in a cycle is false. :(
Blocks: 881959
Status: NEW → ASSIGNED
Keywords: regression
I haven't checked whether anything should be done to mute non-AudioNodeStream streams, but this avoids the crash and reverts to the behavior before changes from bug 881959. The stream still knows it is in a cycle because mInCycle is set.
Attachment #821437 - Flags: review?(paul)
Comment on attachment 821437 [details] [diff] [review] check for non-AudioNodeStreams in MediaStream cycles Review of attachment 821437 [details] [diff] [review]: ----------------------------------------------------------------- This should be fine, yes.
Attachment #821437 - Flags: review?(paul) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Depends on: 939491
No longer depends on: 939491
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: